[package]
name = "pallet-template"
authors = [ "Anonymous" ]
description = "FRAME pallet template for defining custom runtime logic."
edition = "2021"
homepage = "https://substrate.dev"
license = "Unlicense"
repository = "https://github.com/paritytech/substrate/"
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
parity-scale-codec = { workspace = true, features = [ "derive" ] }
scale-info = { workspace = true, features = [ "derive" ] }

frame-benchmarking = { workspace = true, optional = true }

frame-support = { workspace = true }
frame-system = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = [ "std" ]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]
runtime-benchmarks = [ "frame-benchmarking" ]
